--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -34,7 +34,7 @@
                 display:flex;
                 align-items: center;
                 @include mobile{
-                    height: 50%;
+                    height: 40%;
                 } 
             }
         }
@@ -63,6 +63,7 @@
 
                 @include mobile{
                     font-size: 40px;
+                    margin: 5px 0;
                 } 
             }
             h2{
@@ -76,7 +77,7 @@
 
         a{
             position: absolute;
-            bottom: 10px;
+            bottom: 17px;
             left: 40%;
 
             img{
