--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -13,6 +13,10 @@
     justify-content: center;
     transition: all 1s ease;
 
+    @include mobile{
+        width: 130px;
+    }
+
     ul{
         margin: 0;
         padding: 0;
@@ -20,6 +24,9 @@
         font-size: 30px;
         color:white;
         width: 60%;
+        @include mobile{
+            font-size: 20px;
+        }
 
         li{
             margin-bottom: 30px;
