--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,15 +7,21 @@
     flex-direction: column;
     align-items: center;
 
-    h1{
-        font-size: 50px;
+    .title{
+        display: flex;
+        flex: 0.1;
+        h1{
+            font-size: 40px;
+            @include mobile{
+                display: none;
+            } 
+        }
 
-        @include mobile{
-            display: none;
-        } 
     }
+    
 
     .container{
+        flex: 1;
         width: 70%;
         display:flex;
         align-items: center;
