--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -36,16 +36,24 @@
                 display: flex;
                 align-items: center;
                 margin-right: 30px;
-
+                @include mobile{
+                    margin-right: 15px;
+                }
 
                 .icon{
                     font-size: 20px;
                     margin-right: 5px;
+                    @include mobile{
+                        display: none;
+                    }
                 }
 
                 span{
                     font-size: 15px;
                     font-weight: 500;
+                    @include mobile{
+                        font-size: 11px;
+                    }
                 }
             }
         }
